# watchdawg

./: .gitignore  Cargo.toml  README.md  config.toml.template
benchmark/: http-auth-only.md
src/: config.rs  main.rs  server.rs  utils.rs
src/auth/: htpasswd.rs  mod.rs
src/client/: http.rs  https.rs  mod.rs
src/service/: mod.rs
src/service/auth_only/: http.rs  https.rs  mod.rs
src/service/auth_reverse_proxy/: http.rs  https.rs  mod.rs
src/session/: memory.rs  mod.rs  redis.rs
